<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Manager</string>
    <string name="action_credits">Credits</string>
    <string name="start_service">Enable</string>
    <string name="stop_service">Disable</string>
    <string name="network_enabled">Wifi and Mobile Data enabled</string>
    <string name="network_disabled">Wifi and Mobile Data disabled</string>
    <string name="mobile_data_error">Unable to toggle Mobile Data</string>
    <string name="alarm_error">There was an error, but we still received an alarm.</string>
    <string name="cancel_alarm">Manager Service disabled</string>
    <string name="set_alarm">Manager Service enabled</string>
    <string name="work_start_text">Work Start</string>
    <string name="work_end_text">Work End</string>
    <string name="sleep_end_text">Sleep End</string>
    <string name="sleep_start_text">Sleep Start</string>
    <string name="update">Update</string>
    <string name="weekend_disable">Disable on Weekends</string>
    <string name="credit_title">Ideas man</string>
    <string name="hyphen"> - </string>
    <string name="credit_name">Chris Holmes</string>

</resources>
