<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/start_service"
            android:id="@+id/start_service" />
        <View
            android:layout_height="match_parent"
            android:layout_width="30dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_service"
            android:id="@+id/stop_service" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/display_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_container"
        android:orientation="vertical">

        <LinearLayout android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/update_sleep_start"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/update" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_start_text" />

            <TextView
                android:id="@+id/sleep_start_text"
                android:paddingLeft="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/update_sleep_end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/update" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_end_text" />

            <TextView
                android:id="@+id/sleep_end_text"
                android:paddingLeft="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
         </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/update_work_start"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/update" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_start_text" />

            <TextView
                android:id="@+id/work_start_text"
                android:paddingLeft="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/update_work_end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/update" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_end_text" />

            <TextView
                android:id="@+id/work_end_text"
                android:paddingLeft="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:layout_below="@+id/display_container"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekend_disable"
        android:id="@+id/checkBox"
        android:checked="true"
        android:layout_below="@+id/timePicker" />

</RelativeLayout>
